add Class organisation

--- a/Game.html
+++ b/Game.html
@@ -11,6 +11,8 @@
   <script src="js/three.min.js"></script>
   <script src="js/objLoader.js"></script>
   <script src="js/OrbitControls.js"></script>
+  <script src="js/Player.js"></script>
   <script src="js/Main.js"></script>
+  <script src="js/Game.js"></script>
 </body>
 </html>
