modified Class organisation + add movement

--- a/Game.html
+++ b/Game.html
@@ -9,9 +9,12 @@
 </head>
 <body>
   <script src="js/three.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+
   <script src="js/objLoader.js"></script>
   <script src="js/OrbitControls.js"></script>
   <script src="js/Player.js"></script>
+  <script src="js/inputs.js"></script>
   <script src="js/Game.js"></script>
   <script src="js/Main.js"></script>
 </body>
