add Shoot + collide

--- a/Game.html
+++ b/Game.html
@@ -13,6 +13,7 @@
 
   <script src="js/objLoader.js"></script>
   <script src="js/OrbitControls.js"></script>
+  <script src="js/Bullet.js"></script>
   <script src="js/Player.js"></script>
   <script src="js/inputs.js"></script>
   <script src="js/Game.js"></script>
