--- a/Main.html
+++ b/Main.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <title>three.js webgl - OBJLoader + MTLLoader</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+	<meta charset="utf-8">
+	<title>CrossUniverse</title>
+	<link rel="stylesheet" type="text/css" href="js/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/Main.css">
 </head>
-
 <body>
-</body>
+<header>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center" > 	 <!-- case titre du jeu -->
+				<p class="text1">C R O S S</p>
+			</div>
+			<div class="col-md-12 text-center  " > 	 <!-- case titre du jeu -->
+				<p class="text2">U N I V E R S E</p>		
+			</div>
+		</div>
+	</div>
+</header>
+	<div class="container">
+		<div class="row">
+			 <div class="col-md-12 text-center">		<!-- case bouton creation partie -->
+			 	<a href="Game.html">
+			 		<button>Créer une partie</button>
+			 		<img src="textures/engrenage2.png"/>
+			 	</a>
+			 </div>				
+		</div>
+		<div class="row">
+			<div class="col-md-12 text-center">		<!-- case bouton crédit -->
+				<a href="#">
+					<button>Crédit</button>
+			 		<img src="textures/engrenage2.png"/>
+				</a>
+			</div>
+		</div>
+		<div class="row">
+			 <div class="col-md-12 text-center" >		<!-- case bouton description-->
+			 	<a href="explication.html">
+			 		<button>Description</button>
+			 		<img src="textures/engrenage2.png"/>
+			 	</a>
+			</div>				
+		</div>
+	</div>	
 
+	<script src="js/menu.js"></script>
+</body>
 </html>
