--- a/Game.html
+++ b/Game.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>three.js webgl - OBJLoader + MTLLoader</title>
+  <title>CrossUniverse</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<body>
+<body style="margin: 0">
+  <audio src="PreludetoWar.mp3" autoplay loop></audio>
+
   <script src="js/three.min.js"></script>
   <script src="js/jquery.min.js"></script>
 
