--- a/GameOver.html
+++ b/GameOver.html
@@ -21,7 +21,7 @@
 					<div class="col-md-2">
 						<p style="text-align: center;">|</p>
 					</div>
-					<div>
+					<div class="col-md-5">
 						<p style="text-align: center;" class="scoreJ2">0</p>
 					</div>
 				</div>
